--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run start-json-server\" \"next dev\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "start-json-server": "npx json-server --watch data/db.json --port 3001"
   },
   "dependencies": {
     "@emotion/cache": "^11.11.0",
@@ -21,8 +22,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
   }
