--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# IntelliJ IDEA/WebStorm
+.idea
+
+# images
+*.jpeg
+*.jpg
+*.png
+
 # dependencies
 /node_modules
 /.pnp
